add eustice image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="keywords" content="html tutorial template">
 </head>
     <body>
-        This is a great site
+        <h1>This is a title fool!</h1>
+        <img src="https://static.wikia.nocookie.net/courage/images/a/ac/Eustace_Bagge.png/revision/latest?cb=20181025053335" alt="bag">
+        <p>This is a great site</p> 
+
     </body>
 </html>
