--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
     <body>
         <h1>This is a title fool!</h1>
-        <img src="https://static.wikia.nocookie.net/courage/images/a/ac/Eustace_Bagge.png/revision/latest?cb=20181025053335" alt="bag">
+        <img src="https://static.wikia.nocookie.net/courage/images/a/ac/Eustace_Bagge.png" alt="bag">
         <p>This is a great site</p> 
 
     </body>
