--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>This is a title fool!</h1>
         <img src="https://static.wikia.nocookie.net/courage/images/a/ac/Eustace_Bagge.png/revision/latest?cb=20181025053335" alt="bag">
         <p>This is a great site</p> 
+        <img src="https://mario.wiki.gallery/images/thumb/1/13/Funky_Kong_Artwork_-_Donkey_Kong_Country_Tropical_Freeze.png/300px-Funky_Kong_Artwork_-_Donkey_Kong_Country_Tropical_Freeze.png" alt="funky">
 
     </body>
 </html>
