added the color green

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
+
+
 <html>
 <head>
     <title>Funky Page</title>
     <meta name="description" content="Our first page">
     <meta name="keywords" content="html tutorial template">
+    <link rel="stylesheet" href="style.css">
 </head>
     <body>
         <h1>This is a title fool!</h1>
         <img src="https://static.wikia.nocookie.net/courage/images/a/ac/Eustace_Bagge.png" alt="bag">
         <p>This is a great site</p> 
         <img src="https://mario.wiki.gallery/images/thumb/1/13/Funky_Kong_Artwork_-_Donkey_Kong_Country_Tropical_Freeze.png/300px-Funky_Kong_Artwork_-_Donkey_Kong_Country_Tropical_Freeze.png" alt="funky">
+        
 
     </body>
 </html>
