--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-    <title>Funky Page</title>
+    <title>A Super Funky Page</title>
     <meta name="description" content="Our first page">
     <meta name="keywords" content="html tutorial template">
     <link rel="stylesheet" href="style.css">
